--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -15,12 +15,19 @@
 
 <body>
     <div id="login">
+        <h2>Register</h2><br>
+        {% if messages %}
+        {% for message in messages %}
+        <h2 style="color: #b22222;">{{message}}</h2>
+        {% endfor %}
+        {% endif %}
         <h3 class="text-center text-white pt-5">Login form</h3>
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
                 <div id="login-column" class="col-md-6">
                     <div id="login-box" class="col-md-12">
-                        <form id="login-form" class="form" action="" method="post">
+                        <form id="login-form" class="form" action="#" method="post">
+                            {% csrf_token %}
                             <h3 class="text-center text-info">Register</h3>
                             <div class="form-group">
                                 <label for="username" class="text-info">Username:</label><br>
